# hello-again

./: meson.build
data/: com.github.ghabit.hello-again.appdata.xml
src/: Application.vala
